--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cloud_firestore: ^4.17.3
   shared_preferences: ^2.2.3
   image_picker: ^1.1.1
+  dio: ^5.4.3+1
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
@@ -25,4 +26,11 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
+  # To add assets to your application, add an assets section, like this:
+  assets:
+   - assets/images/
+
+
+
+
 
