--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.2.3
   image_picker: ^1.1.1
   dio: ^5.4.3+1
+  lottie: ^3.1.2
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
