--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^1.1.1
   dio: ^5.4.3+1
   lottie: ^3.1.2
+  intl: ^0.19.0
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
